elf2uf2 refactored and fixes
Fixes [#36](https://github.com/JoNil/elf2uf2-rs/pull/36), [#38](https://github.com/JoNil/elf2uf2-rs/issues/38), [#40](https://github.com/JoNil/elf2uf2-rs/issues/40), [#41](https://github.com/JoNil/elf2uf2-rs/pull/41), [#42](https://github.com/JoNil/elf2uf2-rs/pull/42) from `elf2uf2-rs`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,9 @@ members = ["crates/*"]
 default-members = ["crates/elf2flash"]
 
 [workspace.package]
-version = "1.0.0"
+version = "0.0.1"
 edition = "2024"
+license = "MIT OR Apache-2.0"
 
 [workspace.dependencies]
+log = "0.4"
