--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,19 +5,29 @@ on:
     tags:
       - "v*"
 
-jobs:
-  publish-elf2flash:
-    uses: tracel-ai/github-actions/.github/workflows/publish-crate.yml@v4
-    needs:
-      - elf2flash
-    with:
-      crate: elf2flash
-    secrets:
-      CRATES_IO_API_TOKEN: ${{ secrets.CRATES_IO_API_TOKEN }}
+env:
+  CARGO_TERM_COLOR: always
 
-  publish-elf2flash-core:
-    uses: tracel-ai/github-actions/.github/workflows/publish-crate.yml@v4
-    with:
-      crate: elf2flash-core
-    secrets:
-      CRATES_IO_API_TOKEN: ${{ secrets.CRATES_IO_API_TOKEN }}
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Install dependencies
+      run: sudo apt-get update && sudo apt-get install -y libudev-dev
+
+    - name: Build elf2flash
+      run: cargo build -p elf2flash --verbose
+    - name: Test elf2flash
+      run: cargo test -p elf2flash --verbose
+
+    - name: Build elf2flash-core
+      run: cargo build -p elf2flash-core --verbose
+    - name: Test elf2flash-core
+      run: cargo test -p elf2flash-core --verbose
+
+    - name: Publish elf2flash-core to crates.io
+      run: cargo publish -p elf2flash-core --token ${{ secrets.CRATES_IO_API_TOKEN }}
+    - name: Publish elf2flash to crates.io
+      run: cargo publish -p elf2flash --token ${{ secrets.CRATES_IO_API_TOKEN }}
