--- a/crates/usbh-scsi/Cargo.toml
+++ b/crates/usbh-scsi/Cargo.toml
@@ -13,4 +13,5 @@ documentation = "https://docs.rs/usbh-scsi"
 [dependencies]
 log = { workspace = true }
 rusb = { version = "0.9" }
+bootsector = { version = "0.2" }
 thiserror = { workspace = true }
