Add example and docs to usbh-fatfs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 resolver = "3"
 
-members = ["crates/*"]
+members = ["crates/*", "crates/*/examples/*"]
 default-members = ["crates/elf2flash"]
 
 [workspace.package]
