--- a/crates/elf2flash/Cargo.toml
+++ b/crates/elf2flash/Cargo.toml
@@ -6,7 +6,7 @@ license.workspace = true
 readme.workspace = true
 repository = "https://github.com/BjornTheProgrammer/elf2flash/tree/main/crates/elf2flash"
 categories = ["command-line-utilities", "embedded"]
-description = "A tool to help flash elf2 files to the pico"
+description = "A tool to help flash elf2 files to microcontroller"
 keywords = ["rp2040", "pico", "elf2uf2", "elf2uf2-rs", "rp2350"]
 documentation = "https://docs.rs/elf2flash"
 
